[Gadot] update OrderMapViewController + Upload photo

--- a/DMSDriver/DMSDriver/Resources/Storyboards/Common.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Common.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -497,20 +497,20 @@
         <!--Reason List View Controller-->
         <scene sceneID="UqX-Nj-9Fs">
             <objects>
-                <viewController storyboardIdentifier="ReasonListViewController" automaticallyAdjustsScrollViewInsets="NO" id="hhM-cX-ADv" customClass="ReasonListViewController" customModule="DMSDriver_99Cents" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ReasonListViewController" automaticallyAdjustsScrollViewInsets="NO" id="hhM-cX-ADv" customClass="ReasonListViewController" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aEl-He-khq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dYN-FC-pUe">
-                                <rect key="frame" x="0.0" y="30" width="375" height="472"/>
+                                <rect key="frame" x="15" y="30" width="345" height="462"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReasonListCell" rowHeight="98" id="AUb-nP-f1R" customClass="ReasonListCell" customModule="DMSDriver_99Cents" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="98"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReasonListCell" rowHeight="98" id="AUb-nP-f1R" customClass="ReasonListCell" customModule="DMSDriver" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="345" height="98"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AUb-nP-f1R" id="AFJ-K7-fKU">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="98"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="98"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A4E-wI-nH3">
@@ -526,7 +526,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kBO-Jk-Cvd">
-                                                            <rect key="frame" x="15" y="40" width="315" height="47"/>
+                                                            <rect key="frame" x="30" y="40" width="300" height="47"/>
                                                             <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -550,7 +550,7 @@
                                                     <constraints>
                                                         <constraint firstItem="NKv-fO-cPI" firstAttribute="top" secondItem="A4E-wI-nH3" secondAttribute="top" constant="15" id="JMl-HB-V62"/>
                                                         <constraint firstAttribute="trailing" secondItem="Uh5-bl-VIe" secondAttribute="trailing" constant="15" id="PfQ-3t-g6E"/>
-                                                        <constraint firstItem="kBO-Jk-Cvd" firstAttribute="leading" secondItem="NKv-fO-cPI" secondAttribute="leading" id="QPB-Rb-FJL"/>
+                                                        <constraint firstItem="kBO-Jk-Cvd" firstAttribute="leading" secondItem="NKv-fO-cPI" secondAttribute="leading" constant="15" id="QPB-Rb-FJL"/>
                                                         <constraint firstItem="Uh5-bl-VIe" firstAttribute="centerY" secondItem="A4E-wI-nH3" secondAttribute="centerY" id="adJ-FG-JTH"/>
                                                         <constraint firstItem="Uh5-bl-VIe" firstAttribute="leading" secondItem="NKv-fO-cPI" secondAttribute="trailing" constant="10" id="d4E-70-ITn"/>
                                                         <constraint firstAttribute="trailing" secondItem="aNs-zc-xIn" secondAttribute="trailing" constant="15" id="dTd-oc-nrU"/>
@@ -577,20 +577,25 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <outlet property="dataSource" destination="hhM-cX-ADv" id="N7j-y1-lzB"/>
                                     <outlet property="delegate" destination="hhM-cX-ADv" id="9v4-Nx-oH9"/>
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uin-bf-eio">
-                                <rect key="frame" x="15" y="502" width="345" height="0.0"/>
+                                <rect key="frame" x="15" y="497" width="345" height="0.0"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" id="3dR-rs-WDd"/>
                                 </constraints>
                             </view>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fdd-4X-U9O">
-                                <rect key="frame" x="15" y="502" width="345" height="100"/>
+                                <rect key="frame" x="15" y="497" width="345" height="100"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="Eak-33-LpB"/>
@@ -599,7 +604,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                        <real key="value" value="1"/>
+                                        <real key="value" value="0.0"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                         <color key="value" red="0.83529411760000005" green="0.83529411760000005" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
@@ -610,16 +615,16 @@
                                 </userDefinedRuntimeAttributes>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter message.." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="boV-wt-b5d">
-                                <rect key="frame" x="20" y="507" width="123" height="20.5"/>
+                                <rect key="frame" x="20" y="502" width="123" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="w90-zw-2tw">
-                                <rect key="frame" x="15" y="617" width="345" height="40"/>
+                                <rect key="frame" x="15" y="612" width="345" height="45"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pKK-PP-xo0">
-                                        <rect key="frame" x="0.0" y="0.0" width="345" height="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="345" height="45"/>
                                         <color key="backgroundColor" red="0.1764705882" green="0.67450980390000004" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="15"/>
                                         <state key="normal" title="Submit">
@@ -637,15 +642,15 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="6dC-rO-llc"/>
+                                    <constraint firstAttribute="height" constant="45" id="6dC-rO-llc"/>
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="fQk-ck-ECs" firstAttribute="trailing" secondItem="w90-zw-2tw" secondAttribute="trailing" constant="15" id="9jX-zE-TmH"/>
-                            <constraint firstItem="uin-bf-eio" firstAttribute="top" secondItem="dYN-FC-pUe" secondAttribute="bottom" id="TF0-KZ-7TP"/>
-                            <constraint firstItem="dYN-FC-pUe" firstAttribute="leading" secondItem="fQk-ck-ECs" secondAttribute="leading" id="VHP-2x-FOc"/>
+                            <constraint firstItem="uin-bf-eio" firstAttribute="top" secondItem="dYN-FC-pUe" secondAttribute="bottom" constant="5" id="TF0-KZ-7TP"/>
+                            <constraint firstItem="dYN-FC-pUe" firstAttribute="leading" secondItem="fQk-ck-ECs" secondAttribute="leading" constant="15" id="VHP-2x-FOc"/>
                             <constraint firstItem="fQk-ck-ECs" firstAttribute="bottom" secondItem="w90-zw-2tw" secondAttribute="bottom" constant="10" id="ViN-Fg-9HI"/>
                             <constraint firstItem="fdd-4X-U9O" firstAttribute="top" secondItem="uin-bf-eio" secondAttribute="bottom" id="Vt7-Oc-aP4"/>
                             <constraint firstItem="fQk-ck-ECs" firstAttribute="trailing" secondItem="uin-bf-eio" secondAttribute="trailing" constant="15" id="ZLT-N4-ana"/>
@@ -655,7 +660,7 @@
                             <constraint firstItem="fdd-4X-U9O" firstAttribute="leading" secondItem="fQk-ck-ECs" secondAttribute="leading" constant="15" id="mIl-ZK-TFf"/>
                             <constraint firstItem="dYN-FC-pUe" firstAttribute="top" secondItem="fQk-ck-ECs" secondAttribute="top" constant="10" id="oiR-gk-ojI"/>
                             <constraint firstItem="w90-zw-2tw" firstAttribute="top" secondItem="fdd-4X-U9O" secondAttribute="bottom" constant="15" id="qtQ-Fk-Pt2"/>
-                            <constraint firstItem="fQk-ck-ECs" firstAttribute="trailing" secondItem="dYN-FC-pUe" secondAttribute="trailing" id="skU-1y-cBX"/>
+                            <constraint firstItem="fQk-ck-ECs" firstAttribute="trailing" secondItem="dYN-FC-pUe" secondAttribute="trailing" constant="15" id="skU-1y-cBX"/>
                             <constraint firstItem="fQk-ck-ECs" firstAttribute="trailing" secondItem="fdd-4X-U9O" secondAttribute="trailing" constant="15" id="t62-bB-vPb"/>
                             <constraint firstItem="w90-zw-2tw" firstAttribute="leading" secondItem="fQk-ck-ECs" secondAttribute="leading" constant="15" id="xx6-dn-sIP"/>
                         </constraints>
