--- a/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
@@ -87,7 +87,7 @@
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fbg-gT-bC4">
                                             <rect key="frame" x="197.5" y="15" width="147.5" height="40"/>
                                             <color key="backgroundColor" red="0.0" green="0.61568627450000002" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                            <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                             <state key="normal" title="START">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </state>
@@ -106,13 +106,16 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="40" id="sBT-il-lki"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="14"/>
+                                            <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                             <state key="normal" title="Unable To Start">
                                                 <color key="titleColor" red="0.28235294117647058" green="0.36470588235294116" blue="0.4392156862745098" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                     <real key="value" value="5"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                    <color key="value" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                             <connections>
@@ -539,7 +542,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4yC-1z-3rJ">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <view key="tableHeaderView" contentMode="scaleToFill" id="K9i-fM-sKH" customClass="GMSMapView">
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="K9i-fM-sKH">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -616,8 +619,8 @@
                         <viewLayoutGuide key="safeArea" id="K6P-wb-BcZ"/>
                     </view>
                     <connections>
-                        <outlet property="mapView" destination="K9i-fM-sKH" id="sN6-0T-roC"/>
                         <outlet property="tableView" destination="4yC-1z-3rJ" id="Ags-UT-lJ6"/>
+                        <outlet property="vMapContent" destination="K9i-fM-sKH" id="xb6-wj-Ppq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MFL-QQ-6eD" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -682,7 +685,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5aU-te-EHH">
                                         <rect key="frame" x="0.0" y="0.0" width="162.5" height="40"/>
                                         <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="14"/>
                                         <state key="normal" title="Clear">
                                             <color key="titleColor" red="0.28235294117647058" green="0.36470588235294116" blue="0.4392156862745098" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
@@ -705,7 +708,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EFg-an-mdi">
                                         <rect key="frame" x="172.5" y="0.0" width="162.5" height="40"/>
                                         <color key="backgroundColor" red="0.0" green="0.61568627450000002" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="14"/>
                                         <state key="normal" title="Submit">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
@@ -762,11 +765,11 @@
                         <viewLayoutGuide key="safeArea" id="Ilb-vb-1Od"/>
                     </view>
                     <connections>
+                        <outlet property="btnClear" destination="5aU-te-EHH" id="bJZ-PN-Nf4"/>
+                        <outlet property="btnSubmit" destination="EFg-an-mdi" id="dHf-rb-CR6"/>
                         <outlet property="controlsContainerView" destination="QGf-2J-tgu" id="NhT-Oj-v0S"/>
-                        <outlet property="finishButton" destination="EFg-an-mdi" id="6vM-0H-FBY"/>
                         <outlet property="signatureImgView" destination="Dry-mV-Zbd" id="QZd-1y-tx0"/>
                         <outlet property="signatureView" destination="kTo-3J-74r" id="o9F-M7-2IE"/>
-                        <outlet property="unableToFinishButton" destination="5aU-te-EHH" id="8wH-dc-ko8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="557-kM-yAc" userLabel="First Responder" sceneMemberID="firstResponder"/>
