--- a/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
@@ -38,15 +38,14 @@
                                     <action selector="didClickLogin:" destination="3T1-w1-Qsx" eventType="touchUpInside" id="u79-Yh-8ep"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DMS-Logo_S" translatesAutoresizingMaskIntoConstraints="NO" id="c15-3W-M3X">
-                                <rect key="frame" x="112.5" y="61" width="150" height="100"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-gadot" translatesAutoresizingMaskIntoConstraints="NO" id="c15-3W-M3X">
+                                <rect key="frame" x="35" y="47.5" width="305" height="120"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="4yo-kZ-oWF"/>
-                                    <constraint firstAttribute="width" constant="150" id="GRM-li-2Tv"/>
+                                    <constraint firstAttribute="height" constant="120" id="4yo-kZ-oWF"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="xBQ-JA-gRu">
-                                <rect key="frame" x="63.5" y="201" width="248.5" height="60"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="xBQ-JA-gRu">
+                                <rect key="frame" x="63.5" y="187.5" width="248.5" height="69"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGr-Zv-OIw">
                                         <rect key="frame" x="84.5" y="0.0" width="79.5" height="33.5"/>
@@ -58,7 +57,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign in to access your account." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9y9-ce-eu1">
-                                        <rect key="frame" x="0.0" y="38.5" width="248.5" height="21.5"/>
+                                        <rect key="frame" x="0.0" y="47.5" width="248.5" height="21.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                         <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -148,9 +147,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DXr-EW-Tw7">
-                                <rect key="frame" x="109" y="502" width="157" height="30"/>
+                                <rect key="frame" x="201" y="502" width="144" height="28"/>
+                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                 <state key="normal" title="Forgot your password?">
-                                    <color key="titleColor" red="0.98759037260000004" green="0.13012792419999999" blue="0.128249854" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" red="0.0" green="0.61568627450980395" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="login_forgot_password"/>
@@ -162,12 +162,12 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="DXr-EW-Tw7" firstAttribute="trailing" secondItem="3A8-0o-UpW" secondAttribute="trailing" id="7hy-lc-3Qd"/>
                             <constraint firstItem="3A8-0o-UpW" firstAttribute="top" secondItem="sw9-Wi-EcK" secondAttribute="bottom" constant="20" id="8rs-US-myD"/>
                             <constraint firstItem="Q6p-bU-AY5" firstAttribute="leading" secondItem="3A8-0o-UpW" secondAttribute="leading" id="9QF-cY-yVX"/>
                             <constraint firstItem="vdd-rK-Qs9" firstAttribute="top" secondItem="Q6p-bU-AY5" secondAttribute="bottom" constant="2" id="AOU-hy-LZV"/>
                             <constraint firstItem="Utx-s5-Nuw" firstAttribute="top" secondItem="vdd-rK-Qs9" secondAttribute="bottom" constant="15" id="Ccw-Z3-Cpt"/>
-                            <constraint firstItem="DXr-EW-Tw7" firstAttribute="centerX" secondItem="3A8-0o-UpW" secondAttribute="centerX" id="Cxz-Dg-CeB"/>
-                            <constraint firstItem="Q6p-bU-AY5" firstAttribute="top" secondItem="xBQ-JA-gRu" secondAttribute="bottom" constant="15.5" id="DDe-dp-qT4"/>
+                            <constraint firstItem="Q6p-bU-AY5" firstAttribute="top" secondItem="xBQ-JA-gRu" secondAttribute="bottom" constant="20" id="DDe-dp-qT4"/>
                             <constraint firstItem="3A8-0o-UpW" firstAttribute="leading" secondItem="EAj-or-PjX" secondAttribute="leading" constant="30" id="DNf-O0-aF8"/>
                             <constraint firstItem="xBQ-JA-gRu" firstAttribute="centerX" secondItem="CDp-iu-yfc" secondAttribute="centerX" id="ESy-cu-y9b"/>
                             <constraint firstItem="3A8-0o-UpW" firstAttribute="centerX" secondItem="CDp-iu-yfc" secondAttribute="centerX" id="JXm-8U-DXP"/>
@@ -179,10 +179,12 @@
                             <constraint firstItem="vdd-rK-Qs9" firstAttribute="leading" secondItem="Q6p-bU-AY5" secondAttribute="leading" id="jVn-tU-YtJ"/>
                             <constraint firstItem="DXr-EW-Tw7" firstAttribute="top" secondItem="3A8-0o-UpW" secondAttribute="bottom" constant="20" id="klb-wK-nP1"/>
                             <constraint firstItem="sw9-Wi-EcK" firstAttribute="centerY" secondItem="Utx-s5-Nuw" secondAttribute="centerY" id="mGM-re-I24"/>
+                            <constraint firstAttribute="trailing" secondItem="c15-3W-M3X" secondAttribute="trailing" constant="35" id="mVG-LE-Fhp"/>
                             <constraint firstItem="Q6p-bU-AY5" firstAttribute="centerY" secondItem="CDp-iu-yfc" secondAttribute="centerY" constant="-32" id="ruC-YK-sw9"/>
                             <constraint firstItem="vdd-rK-Qs9" firstAttribute="trailing" secondItem="Q6p-bU-AY5" secondAttribute="trailing" id="sI9-NG-j49"/>
                             <constraint firstItem="Utx-s5-Nuw" firstAttribute="trailing" secondItem="vdd-rK-Qs9" secondAttribute="trailing" id="vL0-Mp-d2U"/>
-                            <constraint firstItem="xBQ-JA-gRu" firstAttribute="top" secondItem="c15-3W-M3X" secondAttribute="bottom" constant="40" id="viK-7w-beN"/>
+                            <constraint firstItem="xBQ-JA-gRu" firstAttribute="top" secondItem="c15-3W-M3X" secondAttribute="bottom" constant="20" id="viK-7w-beN"/>
+                            <constraint firstItem="c15-3W-M3X" firstAttribute="leading" secondItem="CDp-iu-yfc" secondAttribute="leading" constant="35" id="zOc-sa-Wi0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="EAj-or-PjX"/>
                     </view>
@@ -195,13 +197,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tAy-dY-ufr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-154" y="64"/>
+            <point key="canvasLocation" x="-154.40000000000001" y="63.418290854572717"/>
         </scene>
     </scenes>
     <resources>
-        <image name="DMS-Logo_S" width="260" height="130"/>
         <image name="check_selected" width="24" height="24"/>
         <image name="ic_login_password" width="18" height="18"/>
         <image name="ic_login_user" width="18" height="18"/>
+        <image name="logo-gadot" width="2242" height="204"/>
     </resources>
 </document>
