--- a/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
@@ -1565,15 +1565,15 @@
                                                     <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="sectionIndexBackgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                                                     <prototypes>
-                                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OrderItemTableViewCell" rowHeight="196" id="Kus-Sw-MzC" customClass="OrderItemTableViewCell" customModule="DMSDriver" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="28" width="375" height="196"/>
+                                                        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OrderItemTableViewCell" rowHeight="210" id="Kus-Sw-MzC" customClass="OrderItemTableViewCell" customModule="DMSDriver" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="28" width="375" height="210"/>
                                                             <autoresizingMask key="autoresizingMask"/>
-                                                            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Kus-Sw-MzC" id="RKL-pd-8BG">
-                                                                <rect key="frame" x="0.0" y="0.0" width="375" height="196"/>
+                                                            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Kus-Sw-MzC" id="RKL-pd-8BG">
+                                                                <rect key="frame" x="0.0" y="0.0" width="375" height="210"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <view alpha="0.80000001192092896" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BJg-BK-ROm">
-                                                                        <rect key="frame" x="10" y="10" width="355" height="176"/>
+                                                                    <view alpha="0.80000001192092896" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BJg-BK-ROm">
+                                                                        <rect key="frame" x="10" y="10" width="355" height="190"/>
                                                                         <subviews>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="puD-3D-Bdg">
                                                                                 <rect key="frame" x="0.0" y="0.0" width="347" height="45"/>
@@ -1691,8 +1691,8 @@
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
-                                                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tqv-94-sAs">
-                                                                                <rect key="frame" x="15" y="140" width="80" height="26"/>
+                                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tqv-94-sAs">
+                                                                                <rect key="frame" x="15" y="154" width="80" height="26"/>
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="T10-Uu-zgu"/>
                                                                                     <constraint firstAttribute="height" constant="26" id="eEQ-5e-YNh"/>
@@ -1707,15 +1707,15 @@
                                                                                     </userDefinedRuntimeAttribute>
                                                                                 </userDefinedRuntimeAttributes>
                                                                             </button>
-                                                                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="ic_time" translatesAutoresizingMaskIntoConstraints="NO" id="Pjh-gR-ebR">
-                                                                                <rect key="frame" x="105" y="148" width="10" height="10"/>
+                                                                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_time" translatesAutoresizingMaskIntoConstraints="NO" id="Pjh-gR-ebR">
+                                                                                <rect key="frame" x="105" y="162" width="10" height="10"/>
                                                                                 <constraints>
                                                                                     <constraint firstAttribute="width" secondItem="Pjh-gR-ebR" secondAttribute="height" id="eRs-Ud-dpW"/>
                                                                                     <constraint firstAttribute="width" constant="10" id="yXU-hO-YeZ"/>
                                                                                 </constraints>
                                                                             </imageView>
-                                                                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISN-fE-vKJ">
-                                                                                <rect key="frame" x="125" y="145" width="34.5" height="16"/>
+                                                                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISN-fE-vKJ">
+                                                                                <rect key="frame" x="125" y="159" width="34.5" height="16"/>
                                                                                 <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                                                 <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                                 <nil key="highlightedColor"/>
@@ -1779,7 +1779,7 @@
                                                             </connections>
                                                         </tableViewCell>
                                                         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OrderItemCollapseTableViewCell" rowHeight="81" id="ove-fy-2fN" customClass="OrderItemTableViewCell" customModule="DMSDriver" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="224" width="375" height="81"/>
+                                                            <rect key="frame" x="0.0" y="238" width="375" height="81"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ove-fy-2fN" id="4oJ-6h-3Vl">
                                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="81"/>
