--- a/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
@@ -131,7 +131,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember Me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sw9-Wi-EcK">
-                                <rect key="frame" x="220" y="397" width="93" height="17"/>
+                                <rect key="frame" x="30" y="397" width="93" height="17"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -140,14 +140,14 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Utx-s5-Nuw">
-                                <rect key="frame" x="321" y="393.5" width="24" height="24"/>
+                                <rect key="frame" x="131" y="393.5" width="24" height="24"/>
                                 <state key="normal" image="check_selected"/>
                                 <connections>
                                     <action selector="didClickRemember:" destination="3T1-w1-Qsx" eventType="touchUpInside" id="j3D-yF-ybr"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DXr-EW-Tw7">
-                                <rect key="frame" x="201" y="502" width="144" height="28"/>
+                                <rect key="frame" x="115.5" y="502" width="144" height="28"/>
                                 <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                 <state key="normal" title="Forgot your password?">
                                     <color key="titleColor" red="0.0" green="0.61568627450980395" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -162,7 +162,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="DXr-EW-Tw7" firstAttribute="trailing" secondItem="3A8-0o-UpW" secondAttribute="trailing" id="7hy-lc-3Qd"/>
+                            <constraint firstItem="sw9-Wi-EcK" firstAttribute="leading" secondItem="vdd-rK-Qs9" secondAttribute="leading" id="1U6-Up-Qt4"/>
                             <constraint firstItem="3A8-0o-UpW" firstAttribute="top" secondItem="sw9-Wi-EcK" secondAttribute="bottom" constant="20" id="8rs-US-myD"/>
                             <constraint firstItem="Q6p-bU-AY5" firstAttribute="leading" secondItem="3A8-0o-UpW" secondAttribute="leading" id="9QF-cY-yVX"/>
                             <constraint firstItem="vdd-rK-Qs9" firstAttribute="top" secondItem="Q6p-bU-AY5" secondAttribute="bottom" constant="2" id="AOU-hy-LZV"/>
@@ -170,6 +170,7 @@
                             <constraint firstItem="Q6p-bU-AY5" firstAttribute="top" secondItem="xBQ-JA-gRu" secondAttribute="bottom" constant="20" id="DDe-dp-qT4"/>
                             <constraint firstItem="3A8-0o-UpW" firstAttribute="leading" secondItem="EAj-or-PjX" secondAttribute="leading" constant="30" id="DNf-O0-aF8"/>
                             <constraint firstItem="xBQ-JA-gRu" firstAttribute="centerX" secondItem="CDp-iu-yfc" secondAttribute="centerX" id="ESy-cu-y9b"/>
+                            <constraint firstItem="DXr-EW-Tw7" firstAttribute="centerX" secondItem="3A8-0o-UpW" secondAttribute="centerX" id="IQE-FV-2uB"/>
                             <constraint firstItem="3A8-0o-UpW" firstAttribute="centerX" secondItem="CDp-iu-yfc" secondAttribute="centerX" id="JXm-8U-DXP"/>
                             <constraint firstItem="vdd-rK-Qs9" firstAttribute="height" secondItem="Q6p-bU-AY5" secondAttribute="height" id="RGF-qS-EM8"/>
                             <constraint firstItem="c15-3W-M3X" firstAttribute="centerX" secondItem="CDp-iu-yfc" secondAttribute="centerX" id="VZH-De-yn0"/>
@@ -182,7 +183,6 @@
                             <constraint firstAttribute="trailing" secondItem="c15-3W-M3X" secondAttribute="trailing" constant="35" id="mVG-LE-Fhp"/>
                             <constraint firstItem="Q6p-bU-AY5" firstAttribute="centerY" secondItem="CDp-iu-yfc" secondAttribute="centerY" constant="-32" id="ruC-YK-sw9"/>
                             <constraint firstItem="vdd-rK-Qs9" firstAttribute="trailing" secondItem="Q6p-bU-AY5" secondAttribute="trailing" id="sI9-NG-j49"/>
-                            <constraint firstItem="Utx-s5-Nuw" firstAttribute="trailing" secondItem="vdd-rK-Qs9" secondAttribute="trailing" id="vL0-Mp-d2U"/>
                             <constraint firstItem="xBQ-JA-gRu" firstAttribute="top" secondItem="c15-3W-M3X" secondAttribute="bottom" constant="20" id="viK-7w-beN"/>
                             <constraint firstItem="c15-3W-M3X" firstAttribute="leading" secondItem="CDp-iu-yfc" secondAttribute="leading" constant="35" id="zOc-sa-Wi0"/>
                         </constraints>
