[Gadot] - Update localize

--- a/DMSDriver/DMSDriver/Resources/Storyboards/Notification.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Notification.storyboard
@@ -142,6 +142,7 @@
                                                                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                             <real key="value" value="5"/>
                                                                         </userDefinedRuntimeAttribute>
+                                                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="Resolve"/>
                                                                     </userDefinedRuntimeAttributes>
                                                                     <connections>
                                                                         <action selector="onbtnClickResolvesWithBtn:" destination="Bqw-km-mWg" eventType="touchUpInside" id="zat-kx-2oS"/>
